@@ -1,5 +1,4 @@
 /* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
 /* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
 /* #undef PQXX_HAVE_PQISTHREADSAFE */
-#define PQXX_HAVE_PQUNESCAPEBYTEA 1
 /* #undef PQXX_HAVE_PQUNESCAPEBYTEA_9 */
