@@ -1,5 +1,4 @@
 #define PQXX_HAVE_PQDESCRIBEPORTAL 1
 #define PQXX_HAVE_PQENCRYPTPASSWORD 1
 #define PQXX_HAVE_PQISTHREADSAFE 1
-#define PQXX_HAVE_PQUNESCAPEBYTEA 1
 #define PQXX_HAVE_PQUNESCAPEBYTEA_9 1
